# ddc-editor

./: .gitignore  add-ddc-source  ddc-editor.cabal  flow-ui.cabal
src/: Application.hs  Site.hs
static/: index.html
static/css/: jellybeans.css  screen.css
static/js/: app.js  ddc-core.js
