name:                flow-ui
version:             0.1
synopsis:            Show ddc-core-flow optimisations.
description:         Show ddc-core-flow optimisations.
license:             BSD3
author:              Jacob Stanley
maintainer:          jacob@stanley.io
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.2

flag development
  description: Whether to build the server in development (interpreted) mode
  default: False

executable flow-ui
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    bytestring                >= 0.9.1   && < 0.11,
    heist                     >= 0.14    && < 0.15,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap                      >= 0.13    && < 0.14,
    snap-core                 >= 0.9     && < 0.10,
    snap-server               >= 0.9     && < 0.10,
    snap-loader-static        >= 0.9     && < 0.10,
    text                      >= 0.11    && < 1.3,
    time                      >= 1.1     && < 1.5,
    xmlhtml                   >= 0.1     && < 0.3
    base                      >= 4.4      && < 5,
    lens                      >= 3.7.6    && < 4.5

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
